# potatos

./: LICENSE  README.md  index.html  package-lock.json  package.json  potatos.cmd  tsconfig.json  vite.config.ts
scripts/: potatos.ps1
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  db.rs  file.rs  lib.rs  main.rs  tray.rs
src/components/: CustomSelect.vue  FloatingBall.vue  SettingsPanel.vue  TodoComposer.vue  TodoList.vue
src/hook/: eventHandler.ts
src/lib/utils/: clipboard.ts  cookie.ts  css.ts  device.ts  eventBus.ts  file.ts  hook.ts  list.ts  lodash.ts  string.ts  time.ts  useTheme.ts  watermark.ts
src/service/: active.service.ts  models.ts  settings.service.ts  tauri.service.ts  todo.service.ts
src/store/: app.ts
src/utils/: datetime.ts  sound.ts  theme.ts
src/views/: IndexView.vue
